
project(webrtc_apm_aec3)

set(BASE_SRCS
adaptive_fir_filter_avx2.cc
adaptive_fir_filter.cc
adaptive_fir_filter_erl_avx2.cc
adaptive_fir_filter_erl.cc
aec3_common.cc
aec3_fft.cc
aec_state.cc
alignment_mixer.cc
api_call_jitter_metrics.cc
block_buffer.cc
block_delay_buffer.cc
block_framer.cc
block_processor.cc
block_processor_metrics.cc
clockdrift_detector.cc
coarse_filter_update_gain.cc
comfort_noise_generator.cc
config_selector.cc
decimator.cc
dominant_nearend_detector.cc
downsampled_render_buffer.cc
echo_audibility.cc
echo_canceller3.cc
echo_path_delay_estimator.cc
echo_path_variability.cc
echo_remover.cc
echo_remover_metrics.cc
erle_estimator.cc
erl_estimator.cc
fft_buffer.cc
fft_data_avx2.cc
filter_analyzer.cc
frame_blocker.cc
fullband_erle_estimator.cc
matched_filter_avx2.cc
matched_filter.cc
matched_filter_lag_aggregator.cc
moving_average.cc
multi_channel_content_detector.cc
refined_filter_update_gain.cc
render_buffer.cc
render_delay_buffer.cc
render_delay_controller.cc
render_delay_controller_metrics.cc
render_signal_analyzer.cc
residual_echo_estimator.cc
reverb_decay_estimator.cc
reverb_frequency_response.cc
reverb_model.cc
reverb_model_estimator.cc
signal_dependent_erle_estimator.cc
spectrum_buffer.cc
stationarity_estimator.cc
subband_erle_estimator.cc
subband_nearend_detector.cc
subtractor.cc
subtractor_output_analyzer.cc
subtractor_output.cc
suppression_filter.cc
suppression_gain.cc
transparent_mode.cc
vector_math_avx2.cc
)

add_library(${PROJECT_NAME} STATIC ${BASE_SRCS})
